// Vitest Snapshot v1

exports[`<HMMInstaller /> > should render when [this.props.task = undefined] and [this.props.installed = false] 1`] = `
<Styled(styled.div)>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
  />
  <div>
    <h3>
      No HMM data available.
    </h3>
    <p>
      You can download and install the official HMM data automatically from our
      <Styled(UnstyledExternalLink)
        href="https://github.com/virtool/virtool-hmm"
      >
         GitHub repository
      </Styled(UnstyledExternalLink)>
      .
    </p>
    <Connect(InstallOption) />
  </div>
</Styled(styled.div)>
`;

exports[`<HMMInstaller /> > should render when [this.props.task = undefined] and [this.props.installed = true] 1`] = `
<Styled(styled.div)>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
  />
  <div>
    <h3>
      No HMM data available.
    </h3>
    <p>
      You can download and install the official HMM data automatically from our
      <Styled(UnstyledExternalLink)
        href="https://github.com/virtool/virtool-hmm"
      >
         GitHub repository
      </Styled(UnstyledExternalLink)>
      .
    </p>
    <Connect(InstallOption) />
  </div>
</Styled(styled.div)>
`;

exports[`<HMMInstaller /> > should render when [this.props.task exists] and [this.props.installed=false] 1`] = `
<Styled(styled.div)>
  <Styled(_AffixedProgressBar)
    color="blue"
    now={45}
  />
  <div>
    <h3>
      Installing
    </h3>
    <p>
      bar
    </p>
  </div>
</Styled(styled.div)>
`;

exports[`<HMMInstaller /> > should render when [this.props.task exists] and [this.props.installed=true] 1`] = `
<Styled(styled.div)>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
  />
  <div>
    <h3>
      No HMM data available.
    </h3>
    <p>
      You can download and install the official HMM data automatically from our
      <Styled(UnstyledExternalLink)
        href="https://github.com/virtool/virtool-hmm"
      >
         GitHub repository
      </Styled(UnstyledExternalLink)>
      .
    </p>
    <Connect(InstallOption) />
  </div>
</Styled(styled.div)>
`;
